ecmascript/parser/tests/test262-error-references/fail/0d4ff79ab93c897a.js.stderr
error: Unexpected token Some(Comma). Expected one of identifier, string literal, numeric literal or [ for the computed key
 --> $DIR/tests/test262-parser/fail/0d4ff79ab93c897a.js:1:5
  |
1 | ({a,,} = 0)
  |     ^

